# cmake-tutorial

./: .gitignore  README.md
build-and-link-library/.cache/clangd/index/: custom_math.cpp.FB9B5E4E6F908D4A.idx  main.cpp.9E17B41E3B4E4601.idx
build-executable/: CMakeLists.txt  README.md
build-library/: CMakeLists.txt  README.md
build-library-and-executable/: README.md
build-library-and-executable/lib/: CMakeLists.txt
build-library-and-link/: CMakeLists.txt
build-library-and-link/exec/: main.cpp
build-library-and-link/lib/include/: custom_math.hpp
build-library/.cache/clangd/index/: custom_math.cpp.BD794F282323C0B3.idx  custom_math.h.74AC227873803BB6.idx
build-library/csrc/: custom_math.cpp
build-multi-library-and-link/: CMakeLists.txt  README.md
build-multi-library-and-link/exec/: CMakeLists.txt  main.cpp
build-multi-library-and-link/lib/: CMakeLists.txt
build-multi-library-and-link/lib/custom_bar/: CMakeLists.txt
build-multi-library-and-link/lib/custom_bar/csrc/: custom_bar.cpp
build-multi-library-and-link/lib/custom_bar/include/: custom_bar.hpp
build-multi-library-and-link/lib/custom_foo/: CMakeLists.txt
build-multi-library-and-link/lib/custom_foo/csrc/: custom_foo.cpp
build-multi-library-and-link/lib/custom_foo/include/: custom_foo.hpp
build-multi-library-and-link/lib/custom_math/: CMakeLists.txt
build-multi-library-and-link/lib/custom_math/.cache/clangd/index/: custom_math.cpp.84EBFA6CCB0C7D04.idx
build-multi-library-and-link/lib/custom_math/csrc/: custom_math.cpp
